force-app/main/default/objects/Line_Of_Business_Account__c/Line_Of_Business_Account__c.object-meta.xml
<CustomObject>
    <label>Line Of Business Account</label>
    <nameField>
        <label>Line Of Business Account</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Line Of Business Account</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>