force-app/main/default/objects/Line_Of_Business_Account__c/fields/Account_Specialty__c.field-meta.xml
<CustomField>
    <fullName>Account_Specialty__c</fullName>
    <label>Account Specialty</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Emergency/Critical Care</fullName>
            </value>
            <value>
                <fullName>Surgical</fullName>
            </value>
            <value>
                <fullName>Optimology</fullName>
            </value>
            <value>
                <fullName>Oncology</fullName>
            </value>
            <value>
                <fullName>Neurology</fullName>
            </value>
            <value>
                <fullName>Dermitology</fullName>
            </value>
            <value>
                <fullName>Other ology&#39;s</fullName>
            </value>
            <value>
                <fullName>Cardiology</fullName>
            </value>
            <value>
                <fullName>General</fullName>
            </value>
            <value>
                <fullName>Rehab</fullName>
            </value>
            <value>
                <fullName>Mobile</fullName>
            </value>
            <value>
                <fullName>Dentistry</fullName>
            </value>
            <value>
                <fullName>Wellness</fullName>
            </value>
            <value>
                <fullName>Spay/Neuter</fullName>
            </value>
            <value>
                <fullName>Grooming</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>