force-app/main/default/objects/Line_Of_Business_Account__c/fields/Account_Type__c.field-meta.xml
<CustomField>
    <fullName>Account_Type__c</fullName>
    <inlineHelpText>&#39;Account Type&#39; is dependent on &#39;Account Segment&#39;</inlineHelpText>
    <label>Account Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Account_Segment__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Equine Practice</fullName>
            </value>
            <value>
                <fullName>Large Animal Practice</fullName>
            </value>
            <value>
                <fullName>Mixed Practice/Pred Lg Animal</fullName>
            </value>
            <value>
                <fullName>Mixed Practice 50/50</fullName>
            </value>
            <value>
                <fullName>Mixed Practice/Pred Sml Animal</fullName>
            </value>
            <value>
                <fullName>Small Animal Practice</fullName>
            </value>
            <value>
                <fullName>Specialty</fullName>
            </value>
            <value>
                <fullName>Exotics</fullName>
            </value>
            <value>
                <fullName>Teaching Institution (with vet hospital)</fullName>
            </value>
            <value>
                <fullName>Humane Society/Shelter</fullName>
            </value>
            <value>
                <fullName>Research Institution (very specific products)</fullName>
            </value>
            <value>
                <fullName>Military</fullName>
            </value>
            <value>
                <fullName>Local Government</fullName>
            </value>
            <value>
                <fullName>State Government</fullName>
            </value>
            <value>
                <fullName>Federal Government</fullName>
            </value>
            <value>
                <fullName>Pet Services</fullName>
            </value>
            <value>
                <fullName>Vendors</fullName>
            </value>
            <value>
                <fullName>Wholesaler/Distributor</fullName>
            </value>
            <value>
                <fullName>Distributors</fullName>
            </value>
            <value>
                <fullName>Pet Store</fullName>
            </value>
            <value>
                <fullName>Grocery/Retail</fullName>
            </value>
            <value>
                <fullName>Pharmacy</fullName>
            </value>
            <value>
                <fullName>Zoo Facility</fullName>
            </value>
            <value>
                <fullName>Farm/Ranch Ship To</fullName>
            </value>
            <value>
                <fullName>Agricultural Merchant</fullName>
            </value>
            <value>
                <fullName>Breeder</fullName>
            </value>
            <value>
                <fullName>Charity</fullName>
            </value>
            <value>
                <fullName>Boarding Facility</fullName>
            </value>
            <value>
                <fullName>Employee</fullName>
            </value>
            <value>
                <fullName>Export</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>