force-app/main/default/objects/Line_Of_Business_Account__c/fields/Actual_Sales_GPM__c.field-meta.xml
<CustomField>
    <fullName>Actual_Sales_GPM__c</fullName>
    <label>GPM Actual Sales</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>