force-app/main/default/objects/Line_Of_Business_Account__c/fields/Actual_SALes_SPEc__c.field-meta.xml
<CustomField>
    <fullName>Actual_SALes_SPEc__c</fullName>
    <label>Specialty Actual Sales</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>