force-app/main/default/objects/Line_Of_Business_Account__c/fields/Alert_Note__c.field-meta.xml
<CustomField>
    <fullName>Alert_Note__c</fullName>
    <label>Alert Note</label>
    <length>255</length>
    <type>Text</type>
</CustomField>