force-app/main/default/objects/Line_Of_Business_Account__c/fields/Billing_Address_Location__c.field-meta.xml
<CustomField>
    <fullName>Billing_Address_Location__c</fullName>
    <label>Billing Address Location</label>
    <scale>7</scale>
    <type>Location</type>
</CustomField>