force-app/main/default/objects/Line_Of_Business_Account__c/fields/Billing_Email__c.field-meta.xml
<CustomField>
    <fullName>Billing_Email__c</fullName>
    <description>Billing email address.</description>
    <inlineHelpText>Billing email address.</inlineHelpText>
    <label>Billing Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>