force-app/main/default/objects/Line_Of_Business_Account__c/fields/CER__c.field-meta.xml
<CustomField>
    <fullName>CER__c</fullName>
    <label>CER</label>
    <length>255</length>
    <type>Text</type>
</CustomField>