force-app/main/default/objects/Line_Of_Business_Account__c/fields/CO_Credit_Days__c.field-meta.xml
<CustomField>
    <fullName>CO_Credit_Days__c</fullName>
    <label>CO Credit Days</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>