force-app/main/default/objects/Line_Of_Business_Account__c/fields/CO_Credit_Limit__c.field-meta.xml
<CustomField>
    <fullName>CO_Credit_Limit__c</fullName>
    <label>CO Credit Limit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>