force-app/main/default/objects/Line_Of_Business_Account__c/fields/CO_Credit_Status__c.field-meta.xml
<CustomField>
    <fullName>CO_Credit_Status__c</fullName>
    <label>CO Credit Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Stop Credit</fullName>
            </value>
            <value>
                <fullName>Cash On Delivery</fullName>
            </value>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>Awaiting Approval</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>