force-app/main/default/objects/Line_Of_Business_Account__c/fields/CO_Rolling_12_Month_Sales__c.field-meta.xml
<CustomField>
    <fullName>CO_Rolling_12_Month_Sales__c</fullName>
    <label>CO Rolling 12 Month Sales</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>