force-app/main/default/objects/Line_Of_Business_Account__c/fields/Corporate_Group__c.field-meta.xml
<CustomField>
    <fullName>Corporate_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Corporate Group</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Line_Of_Business1</relationshipName>
    <type>Lookup</type>
</CustomField>