force-app/main/default/objects/Line_Of_Business_Account__c/fields/Covetrus_Customer_Number__c.field-meta.xml
<CustomField>
    <fullName>Covetrus_Customer_Number__c</fullName>
    <externalId>true</externalId>
    <label>Covetrus Customer Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>