force-app/main/default/objects/Line_Of_Business_Account__c/fields/Covetrus_ID__c.field-meta.xml
<CustomField>
    <fullName>Covetrus_ID__c</fullName>
    <label>Covetrus ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>