force-app/main/default/objects/Line_Of_Business_Account__c/fields/Customer_Class_Code__c.field-meta.xml
<CustomField>
    <fullName>Customer_Class_Code__c</fullName>
    <label>Customer Class Code</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>