force-app/main/default/objects/Line_Of_Business_Account__c/fields/Customer_Class_Name__c.field-meta.xml
<CustomField>
    <fullName>Customer_Class_Name__c</fullName>
    <label>Customer Class Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>