force-app/main/default/objects/Line_Of_Business_Account__c/fields/Customer_Service_Contact__c.field-meta.xml
<CustomField>
    <fullName>Customer_Service_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Service Contact</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Line_Of_Business4</relationshipName>
    <type>Lookup</type>
</CustomField>