force-app/main/default/objects/Line_Of_Business_Account__c/fields/Data_Migration_Conversion_Key__c.field-meta.xml
<CustomField>
    <fullName>Data_Migration_Conversion_Key__c</fullName>
    <description>Data migration key to Legacy Sytems</description>
    <externalId>true</externalId>
    <inlineHelpText>Data migration key to Legacy Sytems</inlineHelpText>
    <label>Data Migration Conversion Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>