force-app/main/default/objects/Line_Of_Business_Account__c/fields/Division_Code__c.field-meta.xml
<CustomField>
    <fullName>Division_Code__c</fullName>
    <label>Division Code</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>