force-app/main/default/objects/Line_Of_Business_Account__c/fields/Division_Code_Name__c.field-meta.xml
<CustomField>
    <fullName>Division_Code_Name__c</fullName>
    <label>Division Code Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>