force-app/main/default/objects/Line_Of_Business_Account__c/fields/ERP_External_ID__c.field-meta.xml
<CustomField>
    <fullName>ERP_External_ID__c</fullName>
    <externalId>true</externalId>
    <label>ERP External ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>