force-app/main/default/objects/Line_Of_Business_Account__c/fields/EVET_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>EVET_Account_Number__c</fullName>
    <description>Legacy Evet Account Number.</description>
    <externalId>true</externalId>
    <inlineHelpText>Legacy Evet Account Number.</inlineHelpText>
    <label>EVET Account Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>