force-app/main/default/objects/Line_Of_Business_Account__c/fields/GSS_NA_Credit_Limit__c.field-meta.xml
<CustomField>
    <fullName>GSS_NA_Credit_Limit__c</fullName>
    <description>Predetermined credit limit for a GSS NA Line of Business account</description>
    <inlineHelpText>Predetermined credit limit for a GSS NA Line of Business account</inlineHelpText>
    <label>GSS NA Credit Limit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>