force-app/main/default/objects/Line_Of_Business_Account__c/fields/GSS_NA_Credit_Status__c.field-meta.xml
<CustomField>
    <fullName>GSS_NA_Credit_Status__c</fullName>
    <description>Determines the credit status of a business line for GSS NA.</description>
    <inlineHelpText>Determines the credit status of a business line for GSS NA.</inlineHelpText>
    <label>GSS NA Credit Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
                <default>true</default>
                <label>Active</label>
            </value>
            <value>
                <fullName>Credit Hold</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>