force-app/main/default/objects/Line_Of_Business_Account__c/fields/GSS_Support_Type__c.field-meta.xml
<CustomField>
    <fullName>GSS_Support_Type__c</fullName>
    <label>GSS Support Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>PIMS__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Premium</fullName>
            </value>
            <value>
                <fullName>Pay per Incident</fullName>
            </value>
            <value>
                <fullName>Prepay</fullName>
            </value>
            <value>
                <fullName>Have Support</fullName>
            </value>
            <value>
                <fullName>No Support</fullName>
            </value>
            <value>
                <fullName>Software &amp; Hardware</fullName>
            </value>
            <value>
                <fullName>Software Only</fullName>
            </value>
            <value>
                <fullName>Hardware Only (Vision)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>