force-app/main/default/objects/Line_Of_Business_Account__c/fields/IMP_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>IMP_Account_Number__c</fullName>
    <description>Legacy Impromed Account Number.</description>
    <externalId>true</externalId>
    <inlineHelpText>Legacy Impromed Account Number.</inlineHelpText>
    <label>IMP Account Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>