force-app/main/default/objects/Line_Of_Business_Account__c/fields/Legacy_ERP_Source__c.field-meta.xml
<CustomField>
    <fullName>Legacy_ERP_Source__c</fullName>
    <externalId>true</externalId>
    <label>Legacy ERP Source</label>
    <length>50</length>
    <type>Text</type>
</CustomField>