force-app/main/default/objects/Line_Of_Business_Account__c/fields/Legacy_ERP_Source_ID__c.field-meta.xml
<CustomField>
    <fullName>Legacy_ERP_Source_ID__c</fullName>
    <externalId>true</externalId>
    <label>Legacy ERP Source ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>