force-app/main/default/objects/Line_Of_Business_Account__c/fields/Line_of_Business__c.field-meta.xml
<CustomField>
    <fullName>Line_of_Business__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Line of Business</label>
    <referenceTo>Line_of_Business__c</referenceTo>
    <relationshipLabel>Line Of Business Account</relationshipLabel>
    <relationshipName>Line_Of_Business_Account_del</relationshipName>
    <type>Lookup</type>
</CustomField>