force-app/main/default/objects/Line_Of_Business_Account__c/fields/MSS_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>MSS_Account_Number__c</fullName>
    <description>Legacy Avimark Account Number</description>
    <externalId>true</externalId>
    <inlineHelpText>Legacy Avimark Account Number</inlineHelpText>
    <label>MSS Account Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>