force-app/main/default/objects/Line_Of_Business_Account__c/fields/Number_of_Vet_Nurses__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Vet_Nurses__c</fullName>
    <label>Number of Vet Nurses</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>