force-app/main/default/objects/Line_Of_Business_Account__c/fields/OwnerId__c.field-meta.xml
<CustomField>
    <fullName>OwnerId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Line_Of_Business2</relationshipName>
    <type>Lookup</type>
</CustomField>