force-app/main/default/objects/Line_Of_Business_Account__c/fields/PIMS__c.field-meta.xml
<CustomField>
    <fullName>PIMS__c</fullName>
    <inlineHelpText>If &quot;PIMS&quot; is VisionVPM or RxWorks, then &quot;GSS Support Type&quot; will be Premium, Pay per Incident, Prepay, Have Support, No Support</inlineHelpText>
    <label>PIMS</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Avimark</fullName>
            </value>
            <value>
                <fullName>Impromed</fullName>
            </value>
            <value>
                <fullName>RxWorks</fullName>
            </value>
            <value>
                <fullName>Robovet</fullName>
            </value>
            <value>
                <fullName>VisionVPM</fullName>
            </value>
            <value>
                <fullName>Viva</fullName>
            </value>
            <value>
                <fullName>ACEsoft</fullName>
            </value>
            <value>
                <fullName>Alis-Vet (Informatvet)</fullName>
            </value>
            <value>
                <fullName>Altapoint</fullName>
            </value>
            <value>
                <fullName>Amber (Autovet)</fullName>
            </value>
            <value>
                <fullName>Animal Intelligence</fullName>
            </value>
            <value>
                <fullName>AVS (Advanced)</fullName>
            </value>
            <value>
                <fullName>BeeFree Cloud Base Veterinary</fullName>
            </value>
            <value>
                <fullName>Better Choice</fullName>
            </value>
            <value>
                <fullName>Britton Wise Computers</fullName>
            </value>
            <value>
                <fullName>Business Infusions HVMS</fullName>
            </value>
            <value>
                <fullName>Chameleon</fullName>
            </value>
            <value>
                <fullName>Clientrax</fullName>
            </value>
            <value>
                <fullName>Clinic-Ware</fullName>
            </value>
            <value>
                <fullName>Cloud Kennel</fullName>
            </value>
            <value>
                <fullName>Complete Clinic Software (CCS)</fullName>
            </value>
            <value>
                <fullName>Compuvet</fullName>
            </value>
            <value>
                <fullName>Cornerstone (IDEXX/PSI)</fullName>
            </value>
            <value>
                <fullName>Custom</fullName>
            </value>
            <value>
                <fullName>Datavet</fullName>
            </value>
            <value>
                <fullName>Dataware</fullName>
            </value>
            <value>
                <fullName>Dogdoc (Sinclair)</fullName>
            </value>
            <value>
                <fullName>Doty</fullName>
            </value>
            <value>
                <fullName>DV MAX</fullName>
            </value>
            <value>
                <fullName>DVM Manager</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>