force-app/main/default/objects/Line_Of_Business_Account__c/fields/Potential_Savings__c.field-meta.xml
<CustomField>
    <fullName>Potential_Savings__c</fullName>
    <label>Potential Savings</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>