force-app/main/default/objects/Line_Of_Business_Account__c/fields/Price_Lists__c.field-meta.xml
<CustomField>
    <fullName>Price_Lists__c</fullName>
    <label>Price Lists</label>
    <length>255</length>
    <type>Text</type>
</CustomField>