force-app/main/default/objects/Line_Of_Business_Account__c/fields/Primary_Account__c.field-meta.xml
<CustomField>
    <fullName>Primary_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Primary Account</label>
    <type>Checkbox</type>
</CustomField>