force-app/main/default/objects/Line_Of_Business_Account__c/fields/Primary_Customer_Service_Rep__c.field-meta.xml
<CustomField>
    <fullName>Primary_Customer_Service_Rep__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Customer Service Rep</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Line_Of_Business_Account</relationshipName>
    <type>Lookup</type>
</CustomField>