force-app/main/default/objects/Line_Of_Business_Account__c/fields/Primary_Warehouse_Name__c.field-meta.xml
<CustomField>
    <fullName>Primary_Warehouse_Name__c</fullName>
    <label>Primary DC Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>