force-app/main/default/objects/Line_Of_Business_Account__c/fields/Provet_Points_Grading__c.field-meta.xml
<CustomField>
    <fullName>Provet_Points_Grading__c</fullName>
    <label>Provet Points Percentage</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>