force-app/main/default/objects/Line_Of_Business_Account__c/fields/Provet_Points_Plus__c.field-meta.xml
<CustomField>
    <fullName>Provet_Points_Plus__c</fullName>
    <description>CCRM-1994</description>
    <label>Provet Points Plus</label>
    <length>18</length>
    <type>Text</type>
</CustomField>