force-app/main/default/objects/Line_Of_Business_Account__c/fields/Provet_Points_Rate__c.field-meta.xml
<CustomField>
    <fullName>Provet_Points_Rate__c</fullName>
    <description>CCRM-1994</description>
    <label>Provet Points Rate</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>