force-app/main/default/objects/Line_Of_Business_Account__c/fields/ProVet_Pricing_Type__c.field-meta.xml
<CustomField>
    <fullName>ProVet_Pricing_Type__c</fullName>
    <label>Provet Pricing Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>