force-app/main/default/objects/Line_Of_Business_Account__c/fields/Provet_Primary_Account__c.field-meta.xml
<CustomField>
    <fullName>Provet_Primary_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is primary account for Provet/ANZ</description>
    <label>Provet Primary Account</label>
    <type>Checkbox</type>
</CustomField>