force-app/main/default/objects/Line_Of_Business_Account__c/fields/Sales_Area__c.field-meta.xml
<CustomField>
    <fullName>Sales_Area__c</fullName>
    <label>Sales Area</label>
    <length>30</length>
    <type>Text</type>
</CustomField>