force-app/main/default/objects/Line_Of_Business_Account__c/fields/Sales_Rep__c.field-meta.xml
<CustomField>
    <fullName>Sales_Rep__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Rep</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Line_Of_Business</relationshipName>
    <type>Lookup</type>
</CustomField>