force-app/main/default/objects/Line_Of_Business_Account__c/fields/Settlement_Discount__c.field-meta.xml
<CustomField>
    <fullName>Settlement_Discount__c</fullName>
    <label>Settlement Discount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>