force-app/main/default/objects/Line_Of_Business_Account__c/fields/Shipping_Location__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Location__c</fullName>
    <label>Shipping Location</label>
    <scale>7</scale>
    <type>Location</type>
</CustomField>