force-app/main/default/objects/Line_Of_Business_Account__c/fields/Telecenter__c.field-meta.xml
<CustomField>
    <fullName>Telecenter__c</fullName>
    <label>Telecenter</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>