force-app/main/default/objects/Line_Of_Business_Account__c/fields/Territory__c.field-meta.xml
<CustomField>
    <fullName>Territory__c</fullName>
    <label>Territory</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>