force-app/main/default/objects/Line_Of_Business_Account__c/fields/TickerSymbol__c.field-meta.xml
<CustomField>
    <fullName>TickerSymbol__c</fullName>
    <label>Ticker Symbol</label>
    <length>20</length>
    <type>Text</type>
</CustomField>