force-app/main/default/objects/Line_Of_Business_Account__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Line_Of_Business1</relationshipName>
    <type>Lookup</type>
</CustomField>