force-app/main/default/objects/Line_Of_Business_Account__c/fields/VST_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>VST_Account_Number__c</fullName>
    <description>Legacy Vetstreet Account Number.</description>
    <externalId>true</externalId>
    <inlineHelpText>Legacy VetStreet Account Number.</inlineHelpText>
    <label>VST Account Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>