force-app/main/default/objects/Line_Of_Business_Account__c/fields/Zone__c.field-meta.xml
<CustomField>
    <fullName>Zone__c</fullName>
    <label>Zone</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>