force-app/main/default/objects/Line_Of_Business_Account__c/recordTypes/CONA_Account.recordType-meta.xml
<RecordType>
    <fullName>CONA_Account</fullName>
    <active>true</active>
    <label>CONA Account</label>
</RecordType>