force-app/main/default/objects/Line_Of_Business_Account__c/recordTypes/Line_Of_Business_Account.recordType-meta.xml
<RecordType>
    <fullName>Line_Of_Business_Account</fullName>
    <active>true</active>
    <label>Line Of Business Account</label>
</RecordType>